--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-certifi==2019.11.28
+certifi==2020.6.20
 chardet==3.0.4
+cx-Freeze==6.2
 et-xmlfile==1.0.1
-idna==2.8
+idna==2.10
 jdcal==1.4.1
-openpyxl==3.0.3
-requests==2.22.0
-urllib3==1.25.8
+openpyxl==3.0.4
+requests==2.24.0
+urllib3==1.25.9
