--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-certifi==2020.6.20
-chardet==3.0.4
-cx-Freeze==6.2
+certifi==2020.12.5
+chardet==4.0.0
+cx-Freeze==6.5.3
 et-xmlfile==1.0.1
-idna==2.10
+idna==3.1
+importlib-metadata==3.10.0
 jdcal==1.4.1
-openpyxl==3.0.4
-requests==2.24.0
-urllib3==1.25.9
+openpyxl==3.0.7
+requests==2.25.1
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+zipp==3.4.1
