--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 certifi==2020.12.5
 chardet==4.0.0
-cx-Freeze==6.5.3
-et-xmlfile==1.0.1
+cx-Freeze==6.6
+cx-Logging==3.0
+et-xmlfile==1.1.0
 idna==3.1
-importlib-metadata==3.10.0
+importlib-metadata==4.0.1
 jdcal==1.4.1
 openpyxl==3.0.7
 requests==2.25.1
